--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build": "cross-env NODE_ENV=production remax build -t"
   },
   "dependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "@inlet/react-pixi": "^6.6.5",
+    "pixi.js": "^6.1.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "remax": "^2.9.1"
   },
   "devDependencies": {
