--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "remax build -w -t",
-    "build": "cross-env NODE_ENV=production remax build -t"
+    "build": "cross-env NODE_ENV=production remax build -m -t"
   },
   "dependencies": {
     "@inlet/react-pixi": "^6.6.5",
     "pixi.js": "^6.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remax": "^2.9.1"
+    "remax": "^2.15.6"
   },
   "devDependencies": {
     "cross-env": "^7.0.2"
